# python-backend/app.py
@@ -1,0 +1,24 @@
+@app.route('/')
+def index():
+    return "Welcome to Morning Briefing"
+
+@app.route('/login')
+
+
+
+weather data:
+
+convert current into hourly
+
+"dt": 1586390400,
+"temp": 278.41,
+"feels_like": 269.43,
+"humidity": 65,
+"wind_speed": 9.83,
+"weather": [
+          {
+            "id": 800,
+            "main": "Clear",
+            "description": "clear sky"
+          }
+        ]
