# python-backend/doc/api-spec.yaml
@@ -7,6 +7,8 @@ info:
 tags:
   - name: login
     description: User authentication
+  - name: data
+    description: Operations to fetch data used to create reports and populate Dashboards
   - name: reports
     description: Operations to create reports and run them
 paths:
@@ -32,10 +34,63 @@ paths:
           schema:
             type: string
       responses:
-        '201':
+        '200':
           description: user authenticated
-        '400':
+        '401':
           description: incorrect username or password
+  /data/weather:
+    post:
+      tags:
+        - data
+      summary: weather forecast data for a given postcode
+      operationId: getWeatherByPostcode
+      description: |
+        Retrieves weather forecast data for a given postcode
+      parameters:
+        - in: query
+          name: postcode
+          description: UK Postcode
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Success
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/WeatherItem'
+        '400':
+          description: Bad Request
+  /data/stocks:
+    post:
+      tags:
+        - data
+      summary: daily price data for a given stock symbol
+      operationId: getPriceByStockSymbol
+      description: |
+        Retrieves the last 100 days of price data for a stock symbol
+      parameters:
+        - in: query
+          name: symbol
+          description: Stock Symbol for US Company
+          required: true
+          schema:
+            type: string
+            example: AAPL
+      responses:
+        '200':
+          description: Success
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/StockItem'
+        '400':
+          description: Bad Request
   /reports/list:
     get:
       tags:
@@ -202,35 +257,62 @@ components:
           example: '2020-08-29T09:12:33.001Z'
         WeatherItem:
           $ref: '#/components/schemas/WeatherItem'
-        StockList:
-          $ref: '#/components/schemas/StockList'
+        StockItem:
+          $ref: '#/components/schemas/StockItem'
     WeatherItem:
       required:
-        - name
+        - datetime
+        - temperature
+        - feels_like
+        - humidity
+        - wind_speed
+        - weather
       properties:
-        name:
-          type: string
-          example: ACME Corporation
-        homePage:
-          type: string
-          format: url
-          example: 'https://www.acme-corp.com'
-        phone:
-          type: string
-          example: 408-867-5309
+        datetime:
+          type: integer
+          format: int64
+          example: 1586487424
+        temperature:
+          type: number
+          format: float
+          example: 27.35
+        feels_like:
+          type: number
+          format: float
+          example: 24.21
+        humidity:
+          type: number
+          format: float
+          example: 65
+        wind_speed:
+          type: integer
+          format: int32
+          example: 65
+        weather:
+          type: object
+          properties:
+            id:
+              type: integer
+              format: int32
+              example: 800
+            main:
+              type: string
+              example: "Clear"
+            description:
+              type: string
+              example: "clear sky"
       type: object
-    StockList:
+    StockItem:
       required:
-        - name
+        - date
+        - openingPrice
       properties:
-        name:
+        date:
           type: string
-          example: ACME Corporation
-        homePage:
-          type: string
-          format: url
-          example: 'https://www.acme-corp.com'
-        phone:
-          type: string
-          example: 408-867-5309
+          format: date
+          example: "2021-02-26"
+        openingPrice:
+          type: number
+          format: float
+          example: 126.67
       type: object
